--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="main_container">
       <div class="box">
         <h1>Make this cat happy by guessing the number</h1>
-        <img id="reaction" src="img/cat_sad.png" alt="cat" />
+        <img id="reaction" src="assets/img/cat_sad.png" alt="cat" />
         <button id="start">Start</button>
       </div>
     </main>
